# Revolver

./: .gitignore  Cargo.toml  README.md  cursor.md
reports/: task_1_detect_items_in__the_image.md  task_1_task_1.md  task_1_task_one.md  task_1_test_1.md  task_2_task_2.md  task_2_task_two.md  task_2_test_2.md  task_3_task_3.md  task_3_test_3.md  task_4_task_4.md
src/: app.rs  gateway.rs  lib.rs  llm.rs  main.rs  protocol.rs  report.rs  scheduler.rs  task.rs  ui.rs
src/engine/: scheduler.rs
src/screens/: common.rs  mod.rs
src/screens/main/: mod.rs
src/screens/main/fragments/: detail.rs  header.rs  help.rs  input.rs  mod.rs  tasks.rs
src/screens/task_input/: mod.rs
src/screens/task_input/fragments/: description.rs  help.rs  hypotheses.rs  mod.rs
tests/: rig_llm.rs  server_gateway.rs
