[package]
name = "revolver"
version = "0.1.0"
edition = "2024"

[dependencies]
rig-core = "0.28.0"
ratatui = "0.26.3"
crossterm = "0.27.0"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "time", "sync"] }
tokio-util = "0.7.11"
futures = "0.3.30"
rand = "0.8.5"

[features]
real-llm = []

[dev-dependencies]
dotenvy = "0.15.7"